--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "firebase-tools": "^13.28.0",
     "global": "^4.4.0",
     "next": "15.0.3",
+    "papaparse": "^5.4.1",
     "react": "19.0.0-rc-66855b96-20241106",
     "react-dom": "19.0.0-rc-66855b96-20241106",
     "styled-components": "^6.1.13",
@@ -20,6 +21,7 @@
   },
   "devDependencies": {
     "@types/node": "^20",
+    "@types/papaparse": "^5.3.15",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "eslint": "^8",
