--- a/package.json
+++ b/package.json
@@ -18,8 +18,7 @@
     "papaparse": "^5.4.1",
     "react": "19.0.0-rc-66855b96-20241106",
     "react-dom": "19.0.0-rc-66855b96-20241106",
-    "styled-components": "^6.1.13",
-    "styled-reset": "^4.5.2"
+    "styled-components": "^6.1.13"
   },
   "devDependencies": {
     "@types/node": "^20",
